Fix di svariati bug, miglioramento nella gestione del editor e aggiunta parziale per la ricerca dei file all'interno del progetto.

--- a/Resources/Templates/C/CMakeLists.txt.template
+++ b/Resources/Templates/C/CMakeLists.txt.template
@@ -3,4 +3,4 @@ project({{project_name}} {{language}})
 
 set(CMAKE_C_STANDARD {{standard}})
 
-add_executable({{project_name}} {{source}})
+add_executable({{project_name}} src/{{source}})
