--- a/Resources/Templates/CPP/CMakeLists.txt.cpp.template
+++ b/Resources/Templates/CPP/CMakeLists.txt.cpp.template
@@ -3,5 +3,5 @@ project({{project_name}})
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable({{project_name}} main.cpp)
+add_executable({{project_name}} src/{{source}})
 
